<resources>

    <string name="app_name">Shopping List</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Shopping List</string>
    <string name="set_alarm">Fixar Alarma</string>
    <string name="delete_list">Borrar Llista</string>
    <string name="add_product">Afegir Producte</string>
    <string name="add_category">Afegir Categoria</string>
    <string name="text_category">Categoria:</string>
    <string name="title_activity_add_category">Afegir Categoria</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_productes_list">Llista de Productes</string>
    <string name="title_activity_add_product">Afegir Producte</string>
    <string name="text_product">Producte:</string>
    <string name="alarm_not_set">No s\'ha activat l\'alarma</string>
    <string name="help">Ajuda</string>

</resources>
